tests/lean/macroStack.lean.expected.out
macroStack.lean:4:5: error: unknown identifier 'x'
macroStack.lean:8:6: error: unknown identifier 'x'
with resulting expansion
  Greater✝ x 0
while expanding
  x > 0
while expanding
  if h : (x > 0) then 1 else 0
macroStack.lean:11:9: error: invalid use of `(<- ...)`, must be nested inside a 'do' expression
macroStack.lean:11:6: error: failed to infer definition type
macroStack.lean:17:0: error: application type mismatch
  x + x✝¹ + x✝
argument
  x✝
has type
  String
but is expected to have type
  Nat
with resulting expansion
  Add.add✝ (x + x✝) x✝¹
while expanding
  (x + x✝) + x✝¹
while expanding
  foo!(x + x✝)
while expanding
  foo!(x + x✝) < 1
while expanding
  if foo!(x + x✝) < 1 then true✝ else false✝
while expanding
  bla! x
